# hostbootstrap

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  REMEDIATION_PLAN.md  cabal.project  notes.txt  pyproject.toml
DEVELOPMENT_PLAN/: 00-overview.md  README.md  development_plan_standards.md  legacy-tracking-for-deletion.md  phase-0-documentation-and-governance.md  phase-1-hostbootstrap-core-scaffolding.md  phase-10-standardized-test-harness.md  phase-11-incus-host-provider.md  phase-12-layered-warm-store.md  phase-13-hostbootstrap-demo.md  phase-14-composition-methodology.md  phase-15-binary-context-config.md  phase-16-project-lifecycle-command.md  phase-17-chain-driven-test-and-context-introspection.md  phase-18-service-runtime-command.md  phase-19-generic-project-model.md  phase-2-host-tools-and-config.md  phase-20-config-driven-demo-worked-example.md  phase-21-documentation-code-consistency-reconciliation.md  phase-3-ensure-reconcilers.md  phase-4-skeletal-dhall-and-command-tree.md  phase-5-cluster-lifecycle-and-resource-cordoning.md  phase-6-base-image-and-thin-python-bootstrapper.md  phase-7-consumer-migration.md  phase-8-dhall-generation-and-extension.md  phase-9-applied-cordon-and-one-parser.md  system-components.md
core/: cabal.project  hie.yaml
core/hostbootstrap-core/: hostbootstrap-core.cabal
core/hostbootstrap-core/app/: Main.hs
core/hostbootstrap-core/dhall/: Core.dhall  Type.dhall  example.dhall
core/hostbootstrap-core/src/HostBootstrap/: CLI.hs  Chain.hs  Command.hs  Container.hs  Context.hs  DocValidator.hs  Ensure.hs  Harness.hs  HostConfig.hs  HostPrereqs.hs  HostTarget.hs  HostTool.hs  Incus.hs  Lift.hs  Lima.hs  Readiness.hs  Registry.hs  RoleLifecycle.hs  Service.hs  Step.hs  Substrate.hs  Wsl2.hs
core/hostbootstrap-core/src/HostBootstrap/Cluster/: Cordon.hs  Lifecycle.hs
core/hostbootstrap-core/src/HostBootstrap/Config/: Class.hs  Schema.hs  Vocab.hs
core/hostbootstrap-core/src/HostBootstrap/Dhall/: Gen.hs  Hoist.hs
core/hostbootstrap-core/src/HostBootstrap/Ensure/: AppleMetal.hs  Colima.hs  Cuda.hs  CudaWin.hs  Docker.hs  Homebrew.hs  Incus.hs  Lima.hs  Tart.hs  Wsl2.hs
core/hostbootstrap-core/src/HostBootstrap/Readiness/: Internal.hs
core/hostbootstrap-core/src/HostBootstrap/Substrate/: Provider.hs
core/hostbootstrap-core/test/: CLISpec.hs  ChainSpec.hs  ContainerSpec.hs  ContextSpec.hs  CordonSpec.hs  DhallGenSpec.hs  DocValidatorSpec.hs  EnsureSpec.hs  Fixture.hs  HarnessSpec.hs  HostToolSpec.hs  IncusSpec.hs  LifecycleSpec.hs  LiftSpec.hs  LimaSpec.hs  ProviderSpec.hs  ReadinessSpec.hs  RegistrySpec.hs  RoleLifecycleSpec.hs  SchemaSpec.hs  Spec.hs  StepSpec.hs  SubstrateSpec.hs  Wsl2Spec.hs
core/hostbootstrap-core/test/golden/: config_schema.dhall
core/warm-deps/: hie.yaml
core/warm-deps/core/: basecontainer-core-deps.cabal
core/warm-deps/daemon/: basecontainer-daemon-deps.cabal
demo/: cabal.project  hie.yaml  hostbootstrap-demo.cabal  hostbootstrap.dhall  kind-in-cluster.yaml  kind.yaml  nvkind-in-cluster.yaml
demo/app/: Main.hs
demo/chart/: Chart.yaml  values.yaml
demo/chart/templates/: configmap.yaml  deployment.yaml  service.yaml
demo/docker/: Dockerfile  container.cabal.project
demo/playwright/: package.json  playwright.config.ts
demo/playwright/tests/: demo.spec.ts
demo/src/HostBootstrapDemo/: Accelerator.hs  Chain.hs  Commands.hs  Config.hs  Container.hs  Role.hs
demo/src/HostBootstrapDemo/Accelerator/: Daemon.hs  Protocol.hs
demo/src/HostBootstrapDemo/Web/: Api.hs  Bridge.hs  Server.hs
demo/test/: AcceleratorRuntimeSpec.hs  AcceleratorSpec.hs  CommandsSpec.hs  ConfigSpec.hs  Spec.hs  WebServerSpec.hs
demo/web/: spago.yaml
demo/web/src/: Main.purs  index.js
docker/: basecontainer.Dockerfile
documents/: README.md  documentation_standards.md
documents/architecture/: binary_context_config.md  build_and_run_model.md  composition_methodology.md  dhall_generation.md  durable_state.md  generic_project_model.md  harness_workflow.md  hostbootstrap_core_library.md  library_hierarchy.md  python_haskell_boundary.md  readiness.md  run_models.md
documents/engineering/: accelerator_daemon.md  applied_cordon.md  authoring_project_binaries.md  base_image.md  build_release.md  cabal_layout.md  cluster_lifecycle.md  code_check_doctrine.md  composition_patterns.md  config_generation.md  derived_dockerfile.md  derived_project_standards.md  dhall_topology.md  durable_windows_runs.md  lima.md  (+15 more)
haskell/haskell-deps/: basecontainer-haskell-deps.cabal  cabal.project  core.project  daemon.project  warm-store.config
haskell/haskell-deps/patches/: README.md
haskell/hostbootstrap-core/: hostbootstrap-core.cabal
haskell/hostbootstrap-core/app/: Main.hs
haskell/hostbootstrap-core/dhall/: Core.dhall  Type.dhall  example.dhall
haskell/hostbootstrap-core/example/: Main.hs
haskell/hostbootstrap-core/src/HostBootstrap/: CLI.hs  Command.hs  DocValidator.hs  Ensure.hs  HostConfig.hs  HostPrereqs.hs  HostTool.hs  Incus.hs  Substrate.hs
haskell/hostbootstrap-core/src/HostBootstrap/Cluster/: Cordon.hs  Lifecycle.hs
haskell/hostbootstrap-core/src/HostBootstrap/Config/: Schema.hs  Vocab.hs
haskell/hostbootstrap-core/src/HostBootstrap/Ensure/: Colima.hs  Cuda.hs  Docker.hs  Ghc.hs  Homebrew.hs  Tart.hs
haskell/hostbootstrap-core/test/: CordonSpec.hs  DocValidatorSpec.hs  EnsureSpec.hs  IncusSpec.hs  LifecycleSpec.hs  SchemaSpec.hs  Spec.hs  SubstrateSpec.hs
haskell/hostbootstrap-core/test/golden/: config_schema.dhall
hostbootstrap/: base_image.py  bootstrap.py  check_code.py  cli.py  dhall_tool.py  docker_ops.py  prereqs.py  process.py  resources.py  self_update.py  spec.py  substrate.py  test_all.py
python/: README.md
scripts/: Start-DurableRun.ps1  build-and-push.sh
tests/: conftest.py  test_base_image.py  test_bootstrap.py  test_cli.py  test_dhall_tool.py  test_docker_ops.py  test_models.py  test_packaging.py  test_prereqs.py  test_process.py  test_resources.py  test_self_update.py  test_spec.py  test_spec_dhall.py  test_substrate.py  test_units.py
(+48 files in other folders)
