cabal-version: 3.12
name: hostbootstrap-core
version: 0.1.0.0
synopsis: Reusable host-management core for the hostbootstrap project family
category: Development
description:
  hostbootstrap-core owns the host-management logic shared across the project
  family: host-tool resolution, substrate detection, the @ensure@ reconcilers,
  the project-local @<project>.dhall@ decoder, cluster-lifecycle semantics, and
  the composable optparse-applicative command tree project binaries extend
  through @runHostBootstrapCLI@.
license: MIT
author: hostbootstrap contributors
maintainer: hostbootstrap contributors
build-type: Simple
tested-with: GHC ==9.12.4

common warnings
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
      HostBootstrap.CLI
      HostBootstrap.Command
      HostBootstrap.HostTool
      HostBootstrap.HostConfig
      HostBootstrap.HostPrereqs
      HostBootstrap.Substrate
      HostBootstrap.Ensure
      HostBootstrap.Ensure.Docker
      HostBootstrap.Ensure.Colima
      HostBootstrap.Ensure.Cuda
      HostBootstrap.Ensure.CudaWin
      HostBootstrap.Ensure.Homebrew
      HostBootstrap.Ensure.Ghc
      HostBootstrap.Ensure.Incus
      HostBootstrap.Ensure.Lima
      HostBootstrap.Ensure.Wsl2
      HostBootstrap.Incus
      HostBootstrap.Lima
      HostBootstrap.Wsl2
      HostBootstrap.HostTarget
      HostBootstrap.Lift
      HostBootstrap.Step
      HostBootstrap.Chain
      HostBootstrap.Registry
      HostBootstrap.RoleLifecycle
      HostBootstrap.Context
      HostBootstrap.Config.Class
      HostBootstrap.Config.Schema
      HostBootstrap.Config.Vocab
      HostBootstrap.Dhall.Gen
      HostBootstrap.Dhall.Hoist
      HostBootstrap.Cluster.Lifecycle
      HostBootstrap.Cluster.Cordon
      HostBootstrap.Harness
      HostBootstrap.Service
      HostBootstrap.DocValidator
  build-depends:
      aeson
    , base >=4.18 && <5
    , bytestring
    , containers
    , directory
    , dhall
    , filepath
    , optparse-applicative
    , process
    , safe-exceptions
    , text
  if !os(windows)
    build-depends:
        unix

executable hostbootstrap
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base >=4.18 && <5
    , hostbootstrap-core

test-suite hostbootstrap-core-test
  import: warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Fixture
      CLISpec
      SubstrateSpec
      HostToolSpec
      EnsureSpec
      SchemaSpec
      DhallGenSpec
      CordonSpec
      ContextSpec
      LifecycleSpec
      HarnessSpec
      IncusSpec
      LimaSpec
      Wsl2Spec
      LiftSpec
      StepSpec
      ChainSpec
      RegistrySpec
      RoleLifecycleSpec
      DocValidatorSpec
  build-depends:
      base >=4.18 && <5
    , bytestring
    , containers
    , dhall
    , directory
    , filepath
    , hostbootstrap-core
    , optparse-applicative
    , tasty
    , tasty-hunit
    , temporary
    , text
