cabal-version: 3.12
name: basecontainer-haskell-deps
version: 0.1.0.0
synopsis: Cabal store warm-up target for basecontainer
category: Development
description:
  This package intentionally exposes a tiny executable with the shared
  dependency set in build-depends so the base image can prebuild the Cabal store.
  .
  The warm Cabal store is shared, but the version-pin *freezes* it produces are
  layered (see documents/engineering/warm_store.md): `core.freeze` pins the base
  + hostbootstrap-core closure + the shared web-build extras (including
  `purescript-bridge`, the demo's web bridge), imported by `mcts` and
  `daemon-substrate`; `daemon.freeze` pins the daemon-family deps (Pulsar/MinIO/
  proto/HTTP — e.g. `hedis`, `postgresql-simple`, `proto-lens*`, `http-client*`,
  `network`, `websockets`, `warp`, `wai*`), imported only by the daemon apps.
  Both freezes are generated in-image by `cabal freeze` and never committed
  (.gitignore / .dockerignore exclude `core.freeze` / `daemon.freeze`).
license: MIT
author: basecontainer contributors
maintainer: basecontainer contributors
build-type: Simple
tested-with: GHC ==9.12.4

executable basecontainer-haskell-deps
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      QuickCheck
    , aeson
    , aeson-pretty
    , ansi-terminal
    , async
    , base >=4.18 && <5
    , base16-bytestring
    , base64-bytestring
    , brick
    , case-insensitive
    , cborg
    , cborg-json
    , co-log
    , co-log-core
    , containers
    , cookie
    , criterion
    , cryptohash-sha1
    , cryptohash-sha256
    , cryptonite
    , dhall
    , directory
    , filepath
    , flat
    , fsnotify
    , hedgehog
    , hedis
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , lens-family
    , lens-family-core
    , memory
    , mtl
    , network
    , optparse-applicative
    , path
    , path-io
    , postgresql-simple
    , prettyprinter
    , prettyprinter-ansi-terminal
    , process
    , proto-lens
    , proto-lens-runtime
    , proto-lens-setup
    , purescript-bridge
    , random
    , safe-exceptions
    , scientific
    , serialise
    , stm
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , temporary
    , text
    , time
    , transformers
    , typed-process
    , unix
    , uuid
    , vector
    , vty
    , wai
    , wai-websockets
    , warp
    , websockets
    , wuss
    , yaml
    , zlib
