cabal-version: 3.12
name: basecontainer-core-deps
version: 0.1.0.0
synopsis: Core+web layer of the basecontainer warm Cabal store
category: Development
description:
  The `core.freeze` layer of the warm Cabal store: base + the
  `hostbootstrap-core` dependency closure + the shared web-build extras
  (`purescript-bridge` for the demo's web bridge, and the web-server stack —
  `warp` / `wai*` / `network` / `http-types` / `websockets` — an L0-direct web
  consumer such as the demo needs). Listing these as one tiny executable's
  build-depends lets the base build prebuild the shared Cabal store and project
  `core.project` into `core.freeze`.
  .
  Imported by every layer: `mcts` and `daemon-substrate` (and any L0-direct
  consumer like the demo) import only `core.freeze`; a daemon app imports
  `core.freeze` AND `daemon.freeze`. The daemon-only deps live in the sibling
  `basecontainer-daemon-deps.cabal` (`daemon.freeze`). Both freezes are
  generated in-image by `cabal freeze` and never committed (.gitignore /
  .dockerignore exclude `core.freeze` / `daemon.freeze`).
  See documents/engineering/warm_store.md.
license: MIT
author: basecontainer contributors
maintainer: basecontainer contributors
build-type: Simple
tested-with: GHC ==9.12.4

executable basecontainer-core-deps
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
      QuickCheck
    , aeson
    , aeson-pretty
    , ansi-terminal
    , async
    , base >=4.18 && <5
    , base16-bytestring
    , base64-bytestring
    , brick
    , case-insensitive
    , cborg
    , cborg-json
    , co-log
    , co-log-core
    , containers
    , cookie
    , criterion
    , cryptohash-sha1
    , cryptohash-sha256
    , cryptonite
    , dhall
    , directory
    , filepath
    , flat
    , fsnotify
    , hedgehog
    , hspec
    , http-types
    , lens-family
    , lens-family-core
    , memory
    , mtl
    , network
    , optparse-applicative
    , path
    , path-io
    , prettyprinter
    , prettyprinter-ansi-terminal
    , process
    , purescript-bridge
    , random
    , safe-exceptions
    , scientific
    , serialise
    , stm
    , tasty
    , tasty-golden
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , temporary
    , text
    , time
    , transformers
    , typed-process
    , unix
    , uuid
    , vector
    , vty
    , wai
    , wai-websockets
    , warp
    , websockets
    , yaml
    , zlib
